# how_to_make_a_python_package

./: #search.html#  .gitignore  .readthedocs.yml  .travis.yml  Makefile  README.md  contents.html  environment.yml  genindex.html  index.html  matrixmultiplication.py  objects.inv  py-modindex.html  rtd_environment.yml  sample_script.py  search.html  searchindex.js  setup.cfg  setup.py  test.py
.mypy_cache/3.7/: _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  posix.data.json  posix.meta.json  sys.data.json  sys.meta.json  types.data.json  types.meta.json  typing.data.json  typing.meta.json  typing_extensions.data.json  typing_extensions.meta.json
_modules/: index.html
_modules/matpy/: log_util.html  matrixmultiplication.html
_modules/tests/: test_matmul_and_dot.html
_sources/: index.rst.txt
_sources/chapters/: documentation.rst.txt  installation.rst.txt  introduction.rst.txt  logging.rst.txt  pypi.rst.txt
chapters/: API.html  documentation.html  installation.html  introduction.html  logging.html  pypi.html  unittesting.html
docs/: Makefile
docs/source/: conf.py  documentation.rst  index.rst
htmapp.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
matpy/: __init__.py  log_util.py  matrixmultiplication.py
matpy/test/: test_matmul_and_dot.py
src/matpy/: __init__.py  (+1 more)
tests/: test_matmul_and_dot.py
(+20 files in other folders)
