[metadata]
# replace with your username:
name = htmapp
version = 0.0.3
author = Lucas Sawade, Peter Makus
author_email = lsawade@princeton.edu
description = How to make a Python package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lsawade/how_to_make_a_python_package
project_urls =
    Documentation = https://how-to-make-a-python-package.readthedocs.io/en/latest/
    TravisCI = https://travis-ci.com/github/lsawade/how_to_make_a_python_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
keywords = Fun, Education, Learning, Programming

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = numpy
tests_require = pytest
zip_safe = False

[options.extras_require]
docs = sphinx; sphinx_rtd_theme
tests = pytest; py

[options.entry_points]
console_scripts = sample-bin = matpy.bins.sample_bin:main

[options.packages.find]
where = src